--- a/src/components/HomeSection.css
+++ b/src/components/HomeSection.css
@@ -83,6 +83,8 @@
   border-radius: 25px;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .btn.btn-primary.tre:hover {
@@ -186,6 +188,13 @@ p.text_export {
   font-weight: bold;
 }
 
+.logoPng {
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  margin-top: 50px;
+}
+
 .grid_2_col {
   display: grid;
   grid-template-columns: 490px 400px;
@@ -203,6 +212,14 @@ p.gridFlagTxt {
 @media (max-width: 480px) {
   .text-content h1 {
     font-size: 1.2em;
+  }
+
+  .logoPng {
+    margin-top: 5px;
+  }
+
+  .btn.btn-primary.tre {
+    margin-top: 0px;
   }
 
   .text-content p {
